Fix \ to / in image paths.

--- a/SOLID.html
+++ b/SOLID.html
@@ -124,7 +124,7 @@ $(document).ready( function() {
 
 </div>
 <div class='slide '>
-<h1 id="solid-intro">SOLID intro</h1><p><img src="images\Principles_Pyramid.png" alt="principles_level" /></p>
+<h1 id="solid-intro">SOLID intro</h1><p><img src="images/Principles_Pyramid.png" alt="principles_level" /></p>
 
 <p>Principles to OO design</p>
 
@@ -197,7 +197,7 @@ $(document).ready( function() {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\single_responsibility_principle_thumb.jpg" alt="SRP" /></p>
+      <p><img src="images/single_responsibility_principle_thumb.jpg" alt="SRP" /></p>
     </td></tr></table>
 <!-- end right -->
 
@@ -241,7 +241,7 @@ $(document).ready( function() {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\openclosed_principle_thumb.jpg" alt="OCP" /></p>
+      <p><img src="images/openclosed_principle_thumb.jpg" alt="OCP" /></p>
     </td></tr></table>
 <!-- end right -->
 
@@ -274,7 +274,7 @@ $(document).ready( function() {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\liskov_substitution_principle_thumb.jpg" alt="OCP" /></p>
+      <p><img src="images/liskov_substitution_principle_thumb.jpg" alt="OCP" /></p>
     </td></tr></table>
 <!-- end right -->
 
@@ -320,7 +320,7 @@ $(document).ready( function() {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\interface_segregation_principle_thumb.jpg" alt="ISP" /></p>
+      <p><img src="images/interface_segregation_principle_thumb.jpg" alt="ISP" /></p>
     </td></tr></table>
 <!-- end right -->
 
@@ -369,7 +369,7 @@ $(document).ready( function() {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\dependency_inversion_principle_thumb.jpg" alt="DIP" /></p>
+      <p><img src="images/dependency_inversion_principle_thumb.jpg" alt="DIP" /></p>
     </td></tr></table>
 <!-- end right -->
 
@@ -381,7 +381,7 @@ $(document).ready( function() {
 <!-- begin step {} -->
 <div class="step">
 
-  <p><img src="images\bunnyfoot-usability-cartoon-accessibility.gif" alt="blind" /></p>
+  <p><img src="images/bunnyfoot-usability-cartoon-accessibility.gif" alt="blind" /></p>
 
   <ol>
     <li>While Design principles are great, they still require good judgement.
@@ -402,7 +402,7 @@ $(document).ready( function() {
 <h1 id="test-driven-development">Test Driven development</h1><!-- begin step {} -->
 <div class="step">
 
-  <p><img src="images\tdd_flow.gif" alt="TDD dev process" /></p>
+  <p><img src="images/tdd_flow.gif" alt="TDD dev process" /></p>
 </div>
 <!-- end step -->
 
@@ -1031,7 +1031,7 @@ class Sort {
 <!-- begin right {} -->
 <td width="50%" style="vertical-align: top;">
 
-      <p><img src="images\good_code.JPG" alt="Metric" /></p>
+      <p><img src="images/good_code.JPG" alt="Metric" /></p>
     </td></tr></table>
 <!-- end right -->
 
